# Nmap Changelog ($Id$); -*-text-*-

o XML output now contains the full path to nmap.xml on Windows. [Jah]

o Zenmap no longer outputs XML elements and attributes that are not in
  the Nmap XML DTD. This was done mostly by removing things from
  Zenmap's output, and adding a few new optional things to the Nmap
  DTD. A scan's profile name, host comments, and interactive text
  output are what were added to nmap.dtd. The .usr filename extension
  for saved Zenmap files is deprecated in favor of the .xml extension
  commonly used with Nmap. Because of these changes the
  xmloutputversion has been increased to 1.03. [David]

o Added the Ndiff utility, which compares the results of Nmap scans.
  See ndiff/README and http://nmap.org/ndiff/ for more
  information. [David]

o Fixed an integer overflow that could cause the scan delay to grow
  large for no reason in some circumstances. [David]

o Enhanced the AS Numbers script (ASN.nse) to better consolidate
  results and bail out if the DNS server doesn't support the ASN
  queries. [Jah]

o Made DNS timeouts in NSE dependent on the timing template [Jah]

o Added two new nselib modules, netbios and smb, that contain common
  code for scripts using NetBIOS and SMB. Also added or updated four
  scripts that use the new modules:
    nbstat.nse: get NetBIOS names and MAC address.
    smb-enum.nse: enumerate SMB users and shares.
    smb-os-discovery.nse: get operating system over SMB (replaces
      netbios-smb-os-discovery.nse).
    smb-security-mode.nse: determine if a host uses user-level or
      share-level security, and what other security features it
      supports.
  [Ron Bowes]

o A script could be executed twice if it was given with the --script
  option, also in the "version" category, and version detection (-sV)
  was requested. This has been fixed. [David]

o Upgraded the shipped libdnet to 1.12. [Kris]

o Upgraded the OpenSSL shipped for Windows to 0.9.8i. [Kris]

Nmap 4.76 [2008-9-12]
